2014-10-25  Eric Botcazou  <ebotcazou@adacore.com>

	* gcc.target/powerpc/longcall-2.c: New test.

2014-11-25  Marek Polacek  <polacek@redhat.com>

	PR c/63877
	* gcc.dg/pr63877.c: New test.

2014-11-25  Markus Trippelsdorf  <markus@trippelsdorf.de>

	PR ipa/64059
	* g++.dg/ipa/pr64059.C: New test.

2014-11-24  Uros Bizjak  <ubizjak@gmail.com>

	PR target/63847
	* c-c++-common/cilk-plus/AN/builtin_fn_custom.c: Add -ffloat-store
	for 32bit x86 targets.
	* c-c++-common/cilk-plus/AN/builtin_fn_mutating.c: Ditto.

2014-11-24  Tobias Burnus  <burnus@net-b.de>

	* gfortran.dg/coarray_collectives_3.f90: Add dg-excess-errors.
	* gfortran.dg/dollar_sym_1.f90: Ditto.
	* gfortran.dg/dollar_sym_3.f: Ditto.

2014-11-24  Alan Lawrence  <alan.lawrence@arm.com>

	* lib/target-supports.exp (check_effective_target_whole_vector_shift):
	Add aarch64{,_be}.

2014-11-24  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/63679
	* gcc.dg/tree-ssa/ssa-fre-42.c: New testcase.
	* gcc.dg/tree-ssa/20030807-5.c: Avoid folding read from global to zero.
	* gcc.target/i386/ssetype-1.c: Likewise.
	* gcc.target/i386/ssetype-3.c: Likewise.
	* gcc.target/i386/ssetype-5.c: Likewise.

2014-11-24  Jonathan Wakely  <jwakely@redhat.com>
	    Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/63203
	* g++.dg/warn/Winit-self-2.C: New.

2014-11-24  Petr Murzin  <petr.murzin@intel.com>

	* gcc.target/i386/extract-insert-combining.c: New test.

2014-11-24  Kyrylo Tkachov  <kyrylo.tkachov@arm.com>

	* gcc.target/aarch64/fuse_adrp_add_1.c: New test.

2014-11-24  Richard Biener  <rguenther@suse.de>

	PR testsuite/64039
	* gcc.dg/tree-ssa/ssa-dom-cse-2.c: XFAIL for hppa*-*-*.

2014-11-24  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/55334
	* gcc.dg/tree-ssa/restrict-5.c: New testcase.

2014-11-24  Eric Botcazou  <ebotcazou@adacore.com>

	* gnat.dg/opt45.adb: New test.

2014-11-24  Tobias Burnus  <burnus@net-b.de>

	* gfortran.dg/dollar_sym_3.f: Update dg-error.