@@ -1,3 +1,12 @@
+2014-11-25  Ilya Enkovich  <ilya.enkovich@intel.com>
+
+	PR target/64056
+	* gcc.target/i386/chkp-strlen-4.c: Add mempcpy target check.
+	* gcc.target/i386/chkp-stropt-4.c: Likewise.
+	* gcc.target/i386/chkp-stropt-8.c: Likewise.
+	* gcc.target/i386/chkp-stropt-12.c: Likewise.
+	* gcc.target/i386/chkp-stropt-16.c: Likewise.
+
 2014-10-25  Eric Botcazou  <ebotcazou@adacore.com>
 
 	* gcc.target/powerpc/longcall-2.c: New test.
